Fix layout distortion due to untruncated title description of events. (#1049)
* Fix layout distortion due to untruncated title description of events

* Add test

* add test for LeftDrawerEvent.tsx

* fixed some tests

* add test complete

--- a/src/screens/EventDashboard/EventDashboard.module.css
+++ b/src/screens/EventDashboard/EventDashboard.module.css
@@ -41,7 +41,7 @@
   font-size: 20px;
   margin-bottom: 30px;
   padding-bottom: 5px;
-  width: 26%;
+  width: 100%;
 }
 .tagdetailsGreen > button {
   background-color: #31bb6b;
